some starts in chapter 2!

--- a/thesis.tex
+++ b/thesis.tex
@@ -31,6 +31,8 @@
 \newacronym{nsclc}{NSCLC}{Non-Small Cell Lung Cancer}
 \newacronym{auprc}{AUPRC}{Area Under Precision-Recall Curve}
 \newacronym{ectmb}{ecTMB}{Estimation and Classification of Tumour Mutation Burden}
+\newacronym{mcmc}{MCMC}{Monte-Carlo Markov Chain}
+\newacronym{dna}{DNA}{Deoxyribonucleic Acic}
 
 % Typesetting
 \usepackage{multirow,latexsym,amsmath,amssymb,amsfonts,amsthm,bbm,mathrsfs,breakcites,dsfont,xcolor, enumerate, url}
@@ -83,16 +85,16 @@
 
 \tableofcontents
 
-\chapter{Introduction}
+\chapter{Introduction \label{chap:intro}}
 
 \subfile{chapters/chapter1}
 
 
-\chapter{The Generative/Predictive Blueprint for Biomarker Estimation}
+\chapter{The Generative/Predictive Blueprint for Biomarker Estimation \label{chap:genmodels}}
 
 \subfile{chapters/chapter2}
 
-\chapter{A Simple Example: Tumour Mutation Burden and Tumour Indel Burden}
+\chapter{Tumour Mutation Burden and Tumour Indel Burden}
 
 \subfile{chapters/chapter3}
 
