--- a/references.bib
+++ b/references.bib
@@ -1,4 +1,35 @@
 
+@article{blei_variational_2017,
+	title = {Variational {Inference}: {A} {Review} for {Statisticians}},
+	volume = {112},
+	issn = {0162-1459},
+	shorttitle = {Variational {Inference}},
+	url = {https://doi.org/10.1080/01621459.2017.1285773},
+	doi = {10.1080/01621459.2017.1285773},
+	abstract = {One of the core problems of modern statistics is to approximate difficult-to-compute probability densities. This problem is especially important in Bayesian statistics, which frames all inference about unknown quantities as a calculation involving the posterior density. In this article, we review variational inference (VI), a method from machine learning that approximates probability densities through optimization. VI has been used in many applications and tends to be faster than classical methods, such as Markov chain Monte Carlo sampling. The idea behind VI is to first posit a family of densities and then to find a member of that family which is close to the target density. Closeness is measured by Kullback–Leibler divergence. We review the ideas behind mean-field variational inference, discuss the special case of VI applied to exponential family models, present a full example with a Bayesian mixture of Gaussians, and derive a variant that uses stochastic optimization to scale up to massive data. We discuss modern research in VI and highlight important open problems. VI is powerful, but it is not yet well understood. Our hope in writing this article is to catalyze statistical research on this class of algorithms. Supplementary materials for this article are available online.},
+	number = {518},
+	urldate = {2021-02-14},
+	journal = {Journal of the American Statistical Association},
+	author = {Blei, David M. and Kucukelbir, Alp and McAuliffe, Jon D.},
+	month = apr,
+	year = {2017},
+	keywords = {Algorithms, Computationally intensive methods, Statistical computing},
+	pages = {859--877},
+}
+
+@article{bradley_data-driven_2021,
+	title = {Data-driven design of targeted gene panels for estimating immunotherapy biomarkers},
+	url = {http://arxiv.org/abs/2102.04296},
+	abstract = {We introduce a novel data-driven framework for the design of targeted gene panels for estimating exome-wide biomarkers in cancer immunotherapy. Our first goal is to develop a generative model for the profile of mutation across the exome, which allows for gene- and variant type-dependent mutation rates. Based on this model, we then propose a new procedure for estimating biomarkers such as Tumour Mutation Burden and Tumour Indel Burden. Our approach allows the practitioner to select a targeted gene panel of a prespecified size, and then construct an estimator that only depends on the selected genes. Alternatively, the practitioner may apply our method to make predictions based on an existing gene panel, or to augment a gene panel to a given size. We demonstrate the excellent performance of our proposal using an annotated mutation dataset from 1144 Non-Small Cell Lung Cancer patients.},
+	urldate = {2021-02-12},
+	journal = {arXiv:2102.04296 [q-bio, stat]},
+	author = {Bradley, Jacob R. and Cannings, Timothy I.},
+	month = feb,
+	year = {2021},
+	note = {arXiv: 2102.04296},
+	keywords = {Quantitative Biology - Genomics, Statistics - Applications},
+}
+
 @article{mai_review_2013,
 	title = {A review of discriminant analysis in high dimensions},
 	volume = {5},
@@ -1020,17 +1051,6 @@ recommender systems, require analysing sparse, high-dim...},
 	year = {2012},
 	keywords = {Biomarkers, Breast cancer, Computer software, Estrogens, Gene expression, Metastasis, Optimization, Web-based applications},
 	pages = {e51862},
-}
-
-@misc{bradley_data-driven_2021,
-	title = {Data-driven design of targeted gene panels for estimating immunotherapy biomarkers},
-	url = {https://github.com/cobrbra/TargetedPanelEstimation_Paper},
-	abstract = {Code and Overleaf project for immunotherapy biomarker estimation.},
-	urldate = {2021-01-21},
-	author = {Bradley, Jacob R. and Cannings, Timothy I.},
-	month = jan,
-	year = {2021},
-	note = {https://github.com/cobrbra/TargetedPanelEstimation\_Paper},
 }
 
 @misc{noauthor_biomart_nodate,
